# tpcds_pg

./: .gitignore  README.md  build_dsgen_tools.sh  calc_time.py  calc_time.sh  create_tpcds_db_tbl.sh  generate_data.sh  load_data.sh  pyproject.toml  remove_last_pipe.py  remove_last_pipe.sh  sys_pg_metrics_collector.py  system_resource_stressor.py  test_load_data.bats  test_remove_last_pipe.bats  tpcds_metrics_data.csv  tpcds_metrics_subplotter.py  update_query_templates.py  update_query_templates.sh
tools/: ansi.tpl  db2.tpl  mysql.tpl  netezza.tpl  oracle.tpl  postgresql.tpl  tpcds.sql
tpcds_query_0901/: query_0.sql
