[project]
name = "tpcds-pg"
version = "0.1.0"
description = "TPC-DS is a decision support benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pyarrow>=19.0.0",
]
